<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    tools:context=".feature.login.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_size_10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/login_logo_title"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_size_4dp"
        android:text="@string/login_accountId"
        android:textColor="#2D3033" />

    <EditText
        android:id="@+id/et_login_accountId"
        style="@style/NormalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_account_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/margin_size_10dp"
        android:paddingVertical="@dimen/margin_size_12dp"
        android:textSize="@dimen/text_title_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:layout_marginBottom="@dimen/margin_size_4dp"
        android:text="@string/login_username"
        android:textColor="#2D3033" />

    <EditText
        android:id="@+id/et_login_username"
        style="@style/NormalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_hint"
        android:textSize="@dimen/text_title_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:layout_marginBottom="@dimen/margin_size_4dp"
        android:text="@string/login_password"
        android:textColor="#2D3033" />

    <EditText
        android:id="@+id/et_login_password"
        style="@style/NormalEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textSize="@dimen/text_title_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_20dp"
        android:layout_marginBottom="@dimen/margin_size_4dp"
        android:text="@string/login_code"
        android:textColor="#2D3033" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_login_code"
            style="@style/NormalEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_size_20dp"
            android:layout_weight="7"
            android:hint="@string/login_code_hint"
            android:inputType="number"
            android:textSize="@dimen/text_title_size" />

        <ImageView
            android:id="@+id/iv_login_code"
            android:layout_width="@dimen/margin_size_0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_login"
        style="@style/MiddleButton"
        android:layout_marginTop="20dp"
        android:text="@string/login_log_in"/>


</LinearLayout>
