<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.huanxin.workspace.feature.main.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_main_top"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="228dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_unreceive_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#026FFF"
                        android:textSize="48sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_unreceive_call_number"
                        android:textColor="#026FFF"
                        android:textSize="@dimen/font_size_13sp" />
                </LinearLayout>


                <TextView
                    style="@style/MainItemTitle"
                    android:text="@string/main_unreceive_call" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="228dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_unfinish_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#026FFF"
                        android:textSize="48sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_unfinish_work_number"
                        android:textColor="#026FFF"
                        android:textSize="@dimen/font_size_13sp" />
                </LinearLayout>

                <TextView
                    style="@style/MainItemTitle"
                    android:text="@string/main_unfinish_work" />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="-55dp"
            android:elevation="1dp"
            app:cardCornerRadius="@dimen/margin_size_4dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_main_video"
                    android:layout_width="@dimen/margin_size_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/main_video_call" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_main_work"
                    android:layout_width="@dimen/margin_size_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_worksheet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/main_worksheet" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_main_device"
                    android:layout_width="@dimen/margin_size_0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_device" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/main_device" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_20dp"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="@dimen/margin_size_2dp"
            app:tabTextColor="@color/selector_main_tab" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_main"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" />
</LinearLayout>
